infra/k8s/overlays/production/production-replicas.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: job-monitoring
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: job-monitoring
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chrome-node
  namespace: job-monitoring
spec:
  replicas: 1
